--- a/BlogUI/Views/Series/Details.cshtml
+++ b/BlogUI/Views/Series/Details.cshtml
@@ -20,6 +20,9 @@
     </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @if (User.IsInRole("Owner"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
