--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -43,10 +43,45 @@
             </div>
         </div>
     </article>
+
+
+    <hr />
+
+    <div class="d-flex justify-content-center bg-light ms-md-5 me-md-5 mb-2 border">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <form class="w-100 p-4" asp-action="Create" asp-controller="Comments" method="post">
+                @Html.Hidden("ArticleId", Model.Id)
+                @*@Html.Hidden("ArticleSlug", Model.Slug)*@
+
+                <div class="form-group p-2">
+                    <label class="h2 form-label fw-bold">Add Comment</label>
+                    <textarea name="Comment" class="form-control" rows="3"></textarea>
+
+                </div>
+
+                <div class="d-flex justify-content-center mt-2">
+                    <button type="submit" class="btn btn-outline-dark w-50 btn-sm">Submit</button>
+                </div>
+            </form>
+        }
+        else
+        {
+            <a class="btn btn-sm btn-dark w-25 m-3" asp-area="Identity" asp-page="/Account/Login" asp-route-ReturnUrl="~/Articles/Details?slug=@Model.Slug">
+                Login to Add Comment
+            </a>
+        }
+    </div>
+
+    <div id="commentSection" class="d-flex justify-content-center p-3"><span class="btn btn-sm btn-light border border-2 w-50">@Model.Comments.Count Comment(s)</span></div>
+
+
+
+
     <div>
         @if (User.IsInRole("Owner"))
         {
-        <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit</a>
+            <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit</a><br />
         }
         <a asp-action="Index">Back to List</a>
     </div>
