--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -40,28 +40,33 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col">
-                        <div class="row mb-2">
-                            <div class="col">
-                                <input type="text" class="form-control" id="TagEntry" />
+                <div class="form-group p-3">
+                    <div class="row mt-2 bg-light shadow-sm p-3 rounded-3 border row-cols-1 row-cols-md-2 gy-2">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col">
+                                    <label class="control-label">Manage Tags</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col ">
+                                    <input type="text" class="form-control rounded-2" id="TagEntry" />
+                                </div>
+                            </div>
+                            <div class="row mt-2 ">
+                                <div class="col d-flex align-items-center justify-content-center">
+                                    <button onclick="AddTag()" name="Add" type="button" class="btn btn-block btn-outline-dark">Add</button>
+                                </div>
+                                <div class="col d-flex align-items-center justify-content-center">
+                                    <button onclick="DeleteTag()" name="Delete" type="button" class="btn btn-block btn-outline-dark">Delete</button>
+                                </div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col">
-                                <button onclick="AddTag()" name="Add" type="button" class="btn-block">Add</button>
-                            </div>
-                            <div class="col">
-                                <button onclick="DeleteTag()" name="Delete" type="button" class="btn-block">Delete</button>
-                            </div>
+                        <div class="col">
+                            <select class="btn-block" name="TagValues" id="TagList" multiple></select>
                         </div>
-                    </div>
-                    <div class="col">
-                        <select class="btn-block" name="TagValues" id="TagList" multiple></select>
                     </div>
                 </div>
-            </div>
 
 
             <div class="form-group">
@@ -89,7 +94,7 @@
 
     <script>
 
-        let tagValues = '@ViewData["TagValues"]';
+        let tagValues = "@ViewData["TagValues"]";
 
         $('#Body').summernote({
             placeholder: 'Message',
