--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -37,6 +37,35 @@
                 <textarea asp-for="Body" class="form-control"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
+
+            <div class="form-group p-3">
+            <div class="row mt-2 bg-light shadow-sm p-3 rounded-3 border row-cols-1 row-cols-md-2 gy-2">
+                <div class="col">
+                    <div class="row">
+                        <div class="col">
+                            <label class="control-label">Manage Tags</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col ">
+                            <input type="text" class="form-control rounded-2" id="TagEntry" />
+                        </div>
+                    </div>
+                    <div class="row mt-2 ">
+                        <div class="col d-flex align-items-center justify-content-center">
+                            <button onclick="AddTag()" name="Add" type="button" class="btn btn-block btn-outline-dark">Add</button>
+                        </div>
+                        <div class="col d-flex align-items-center justify-content-center">
+                            <button onclick="DeleteTag()" name="Delete" type="button" class="btn btn-block btn-outline-dark">Delete</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <select class="btn-block" name="TagValues" id="TagList" multiple></select>
+                </div>
+            </div>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select asp-for="Status" asp-items="@Html.GetEnumSelectList<Status>()" class="form-control"></select>
@@ -47,6 +76,8 @@
                 <input type="file" name="NewImage" class="form-control" asp-items="ViewBag.NewImage" accept=".jpg,.jpeg,.png,.ico,.gif,.svg" />
                 <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -62,6 +93,9 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
     <script>
+        let tagValues = "@ViewData["TagValues"]";
+
+
         $('#Body').summernote({
             placeholder: 'Message',
             tabsize: 2,
