drafted content interface decision

--- a/BlogUI/Views/Articles/ArticleIndex.cshtml
+++ b/BlogUI/Views/Articles/ArticleIndex.cshtml
@@ -27,8 +27,8 @@
         {
             <tr>
                 <td>
-                    Title: @Html.DisplayFor(modelItem => item.Title) <br />
-                    Summary: @Html.DisplayFor(modelItem => item.Summary)
+                    @Html.DisplayFor(modelItem => item.Title) <br />
+                    @Html.DisplayFor(modelItem => item.Summary)
                 </td>
                 <td>
                     Created: @Html.DisplayFor(modelItem => item.Created)<br />
