--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -25,12 +25,6 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Summary)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Created)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
@@ -50,18 +44,13 @@
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Summary)
-                </td>
-                <td>
+                    @Html.DisplayFor(modelItem => item.Status)<br />
                     @Html.DisplayFor(modelItem => item.Created)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
                     @if (item.Image != null)
                     {
-                        <img class="img-fluid" src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
+                        <img height="75px" src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
                     }
                 </td>
                 <td>
