--- a/BlogUI/Views/Home/Index.cshtml
+++ b/BlogUI/Views/Home/Index.cshtml
@@ -16,25 +16,17 @@
             {
                 <div class="post-preview">
                     <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
-                        <h3 class="post-title">
-                            @item.Title
-                        </h3>
-                        <h4 class="post-description">
-                            @item.Description
+                        <h4 class="post-title">
+                            @item.Title: @item.Description
                         </h4>
                     </a>
-                    <p class="post-meta">
-                        Posted by
-                        <a href="#">@item.Creator</a>
-                        on @item.Created.ToShortDateString()
-                    </p>
                 </div>
                 <hr />
             }
 
             <!--pager-->
             <div class="clearfix">
-                <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+                <a class="btn btn-primary float-right" href="#">Older Series &rarr;</a>
             </div>
         </div>
     </div>
