landing page layout

--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -32,11 +32,11 @@
                         </li>
                         @if (User.IsInRole("Owner"))
                         {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Create">Create Article</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Create">Create Article</a>
+                            </li>
                         }
-                        </ul>
+                    </ul>
 
                     <partial name="_LoginPartial" />
                 </div>
@@ -46,19 +46,20 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <div class="mb-3 mt-5">
-                <form asp-action="SearchIndex" asp-controller="Articles">
-                    <div class="input-group mt-5 btn-group-sm">
-                        <input type="text" name="SearchTerm" class="form-control" placeholder="Search Posts">
-                        <button class="btn btn-warning rounded-end px-2 px-md-5" type="submit">Search</button>
-                    </div>
-                </form>
-            </div>
-
             @RenderBody()
         </main>
     </div>
 
+    <div class="container pb-2">
+        <div class="mb-3 mt-5">
+            <form asp-action="SearchIndex" asp-controller="Articles">
+                <div class="input-group mt-5 btn-group-sm">
+                    <input type="text" name="SearchTerm" class="form-control" placeholder="Search Posts">
+                    <button class="btn btn-warning rounded-end px-2 px-md-5" type="submit">Search</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
