--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -12,23 +12,27 @@
     ViewData["Title"] = "Details";
 }
 
-<div class="col d-flex justify-content-start">
-    <h4>@Model.SeriesModel.Title - @Model.Title</h4>
+<div class="row">
+    <div class="col d-flex content-align-center">
+        <h4>@Model.SeriesModel.Title - @Model.Title</h4>
+    </div>
+    <div class="col d-flex content-align-start">
+        Article Tags: 
+        @foreach (var tag in Model.Tags)
+        {
+            <form asp-action="TagIndex" asp-route-tag="@tag.Tag.ToLower()" method="post">
+                @Html.Hidden("id", Model.Id)
+                <button class="btn btn-xsm btn-outline-dark mx-1" type="submit">#@tag.Tag</button>
+            </form>
+        }
+    </div>
 </div>
 
 <section>
     <div class="row">
-        <div class="col d-flex justify-content-start">
-            @foreach (var tag in Model.Tags)
-            {
-                <form asp-action="TagIndex" asp-route-tag="@tag.Tag.ToLower()" method="post">
-                    @Html.Hidden("id", Model.Id)
-                    <button class="btn btn-xsm btn-outline-dark mx-1" type="submit">#@tag.Tag</button>
-                </form>
-            }
-        </div>
+
     </div>
-    Created: @Model.Created.ToShortDateString() | Status: @Model.Status
+    Created: @Model.Created.ToShortDateString() | Status: @Model.Status <br />
     @Model.Summary <br />
 </section>
     <hr />
@@ -55,8 +59,8 @@
 
                 <div class="container d-flex align-content-center ps-5 pe-5 p-2 gy-3 border h-100">
                     <div class="row w-100">
-                        <div class=" col-3 ">
-                            <img class="img-thumbnail rounded-3" src="@imageService.DecodeImage(comment.Creator.ImageData, comment.Creator.ContentType)" />
+                        <div class="col-3">
+                            <img class="ml-3 mt-3 image-thumbnail rounded-circle" width="75px" src="@imageService.DecodeImage(comment.Creator.ImageData, comment.Creator.ContentType)" />
                         </div>
                         <!--Render the editbutton-->
                         <div class=" col col-12 col-lg-9 ">
@@ -92,7 +96,7 @@
                                     }
                                     else
                                     {
-                                        <div class="row">
+                                        <div class="row ml-1">
                                             <span>@comment.Comment</span>
                                         </div>
 
@@ -155,7 +159,7 @@
 
                 <div class="form-group p-2">
                     <label class="h2 form-label fw-bold">Add Comment</label>
-                    <textarea name="Comment" class="form-control" rows="3"></textarea>
+                    <textarea name="Comment" class="form-control" rows="4"></textarea>
 
                 </div>
 
