--- a/BlogUI/Views/Home/Index.cshtml
+++ b/BlogUI/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         @foreach (var item in Model.Take(1))
         {
             <div class="col-lg-12 mx-auto mb-2">
-                <div class="card p-1 h-100">
+                <div class="card p-4 h-100">
                     <a asp-controller="Articles" asp-action="Details" asp-route-slug="@item.Slug">
 
                         @if (item.Image != null)
@@ -37,7 +37,7 @@
         @foreach (var item in Model.Skip(1))
         {
             <div class="col-lg-6 col-md-6 mx-auto mb-2 contents-justify-start">
-                <div class="card p-1 h-100">
+                <div class="card p-4 h-100">
                     <a asp-controller="Articles" asp-action="Details" asp-route-slug="@item.Slug">
 
                         @if (item.Image != null)
@@ -52,31 +52,29 @@
                 </div>
             </div>
         }
-
-            <!--pager-->
-            <!--<div class="clearfix">
-                    <a class="btn btn-primary float-right" href="#">Older Articles &rarr;</a>
-                </div>
-            </div>
-        </div>-->
-
-        @*<div class="row">
-            <div class="col h3">
-                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-            new PagedListRenderOptions
-            {
-                LiElementClasses = new string[] { "page-item" },
-                PageClasses = new string[] { "page-link" }
-            })
-            </div>
-        </div>*@
-
-
-        </div>
+    </div>
 </div>
+
+@if (Model.PageCount > 1)
+{
+    <div class="clearfix">
+        <a class="btn btn-primary float-right" href="#">Older Articles &rarr;</a>
+    </div>
+
+    <div class="row">
+        <div class="col h3">
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+        new PagedListRenderOptions
+        {
+            LiElementClasses = new string[] { "page-item" },
+            PageClasses = new string[] { "page-link" }
+        })
+        </div>
+    </div>
+}
