--- a/BlogUI/Views/Home/Index.cshtml
+++ b/BlogUI/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
                         }
                     </a>
                     <div class="card-body text-start h-100">
+                        @item.SeriesModel.Title
                         <h5 class="card-title">@item.Title</h5>
                         <p class="card-text">@item.Summary</p>
                     </div>
@@ -46,6 +47,7 @@
                         }
                     </a>
                     <div class="card-body text-start h-100">
+                        @item.SeriesModel.Title
                         <h5 class="card-title">@item.Title</h5>
                         <p class="card-text">@item.Summary</p>
                     </div>
