--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -33,13 +33,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
+                            </li>
 
-                            @if (User.IsInRole("Owner"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Create">New Article</a>
-                                </li>
-                            }
                         </ul>
                         <ul class="navbar-nav flex-row justify-content-end">
                             <li class="nav-item">
