added series to nav

--- a/BlogUI/Views/Articles/ArticleIndex.cshtml
+++ b/BlogUI/Views/Articles/ArticleIndex.cshtml
@@ -58,20 +58,23 @@
     </tbody>
 </table>
 
-<hr />
-<div class="row">
-    <div class="col h3">
-        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@if (Model.PageCount > 1)
+{
+    <hr />
+    <div class="row">
+        <div class="col h3">
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+        </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col">
-        @Html.PagedListPager(Model, page => Url.Action("ArticleIndex", new { id = Model.FirstOrDefault().SeriesModelId }),
-        new PagedListRenderOptions
-        {
-            LiElementClasses = new string[] { "page-item" },
-            PageClasses = new string[] { "page-link" }
-        })
+    <div class="row">
+        <div class="col">
+            @Html.PagedListPager(Model, page => Url.Action("ArticleIndex", new { id = Model.FirstOrDefault().SeriesModelId }),
+            new PagedListRenderOptions
+            {
+                LiElementClasses = new string[] { "page-item" },
+                PageClasses = new string[] { "page-link" }
+            })
+        </div>
     </div>
-</div>
+}
