--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -65,16 +65,23 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-row small">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series: </a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">by Series: </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABSES</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">ONE</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">TWO</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">LEARNING</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">THREE</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex"asp-route-id="6">TOOLS</a>
                             </li>
                         </ul>
 
